--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/nivaldo.jpg" alt="Foto de Nivaldo" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/nivaldo.JPG" alt="Foto de Nivaldo" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">N</span>
               </div>
               <div class="min-w-0">
@@ -572,7 +572,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/rafaela.jpg" alt="Foto de Rafaela" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/rafaela.JPG" alt="Foto de Rafaela" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">R</span>
               </div>
               <div class="min-w-0">
@@ -595,7 +595,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/heleticia.jpg" alt="Foto de Heletícia" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/heleticia.JPG" alt="Foto de Heletícia" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">H</span>
               </div>
               <div class="min-w-0">
@@ -624,7 +624,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/Laura.jpg" alt="Foto de Laura" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/Laura.JPG" alt="Foto de Laura" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">L</span>
               </div>
               <div class="min-w-0">
@@ -648,7 +648,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/eduarda.jpg" alt="Foto de Eduarda" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/eduarda.JPG" alt="Foto de Eduarda" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">E</span>
               </div>
               <div class="min-w-0">
@@ -671,7 +671,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/brunna.jpg" alt="Foto de Brunna" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/brunna.JPG" alt="Foto de Brunna" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">B</span>
               </div>
               <div class="min-w-0">
@@ -694,7 +694,7 @@
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
             <div class="flex items-center gap-4">
               <div class="avatar avatar-md">
-                <img src="assets/agatha.jpg" alt="Foto de Agatha" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+                <img src="assets/agatha.JPG" alt="Foto de Agatha" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
                 <span class="avatar-initials">A</span>
               </div>
               <div class="min-w-0">
@@ -726,7 +726,7 @@
         <p class="text-zinc-700 dark:text-zinc-300 mb-6">Clique no botão ao lado para responder nosso formulário</p>
       </div>
       <div class="rounded-3xl border border-zinc-200/60 dark:border-white/10 shadow-sm p-8 bg-white dark:bg-white/5 text-center brand-ring gold-top">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfg4CVPWbUZQ90VhRJhxNeITzz9PJ0pac_yD2g7FC5WJ2ewwQ/viewform?usp=header" download>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiSRn04pZtyumxjkZHqdHbUR_g-Rul399XY9ISMy1f0PP9FA/viewform?usp=header" download>
           <button class="btn-primary w-full"> Quero fazer parte da Liga</button>
         </a>
         <p class="text-[11px] text-zinc-500 dark:text-zinc-400 mt-3"></p>
