--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
     </p>
 
     <form id="formInteresses"
-          action="https://formspree.io/f/mjkerkvv"
+          action="https://formspree.io/f/myzddver"
           method="POST"
           class="space-y-4 bg-white dark:bg-white/5 p-6 rounded-2xl shadow-md border border-zinc-200 dark:border-white/10">
 
