--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         </div>
       </div>
 
-      <!-- Diretoria Executiva -->
+      <!-- Diretoria Fundadora -->
       <div class="mb-10">
         <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretoria Executiva</h3>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -616,7 +616,7 @@
         </div>
       </div>
 
-      <!-- Diretorias -->
+      <!-- Diretoria Executiva -->
       <div>
         <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretorias</h3>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
