Correção diretorias.html

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
       <!-- Diretoria Fundadora -->
       <div class="mb-10">
-        <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretoria Executiva</h3>
+        <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretoria Fundadora</h3>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
           <!-- Nivaldo -->
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
@@ -618,7 +618,7 @@
 
       <!-- Diretoria Executiva -->
       <div>
-        <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretorias</h3>
+        <h3 class="text-sm font-semibold tracking-wide text-zinc-500 dark:text-zinc-400 uppercase mb-4">Diretoria Executiva</h3>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
            <!-- Heletícia -->
           <article class="rounded-2xl glass p-6 transition hover:-translate-y-[2px] gold-top">
