Troca de código da seção de inscrição.html
Antes: 
  <!-- Inscrição: botão baixa PDF -->
  <section id="inscricao" class="bg-zinc-50 dark:bg-[#0d1430]">
    <div class="mx-auto max-w-6xl px-4 py-14 grid md:grid-cols-2 gap-10 items-center">
      <div>
<h2 class="h1-fancy text-2xl md:text-3xl font-bold mb-3 brand-navy dark:text-white gold-underline">
  Quer falar com a gente?
</h2>
<p class="text-sm text-zinc-700 dark:text-zinc-300 mb-6">
  Use o botão ao lado para enviar um e-mail direto para nossa equipe, ou veja outras formas de contato mais abaixo.
</p>

      </div>
<div class="rounded-3xl border border-zinc-200/60 dark:border-white/10 shadow-sm p-8 bg-white dark:bg-white/5 text-center brand-ring gold-top">
  <a class="btn-primary w-full inline-flex items-center justify-center"
     href="mailto:ligalaipeem@gmail.com?subject=Contato%20LAIPEEM&body=Olá,%20gostaria%20de%20tirar%20uma%20dúvida%20com%20a%20equipe.">
    ✉️ Enviar e-mail
  </a>
  <p class="text-[11px] text-zinc-500 dark:text-zinc-400 mt-3">
    Alternativa rápida de contato direto por e-mail.
  </p>
</div>

    </div>
  </section>



Depois: 
<!-- Inscrição / Contato -->
<section id="inscricao" class="bg-zinc-50 dark:bg-[#0d1430]">
  <div class="mx-auto max-w-6xl px-4 py-14 grid md:grid-cols-2 gap-10 items-center">
    
    <!-- Texto da esquerda -->
    <div>
      <h2 class="h1-fancy text-2xl md:text-3xl font-bold mb-3 brand-navy dark:text-white gold-underline">
        Quer falar com a gente?
      </h2>
      <p class="text-sm text-zinc-700 dark:text-zinc-300 mb-6">
        Use o botão ao lado para enviar um e-mail direto para nossa equipe, ou veja outras formas de contato mais abaixo.
      </p>
    </div>

    <!-- Botão da direita -->
    <div class="rounded-3xl border border-zinc-200/60 dark:border-white/10 shadow-sm p-8 bg-white dark:bg-white/5 text-center brand-ring gold-top">
      <a class="btn-primary w-full inline-flex items-center justify-ce

--- a/index.html
+++ b/index.html
@@ -717,30 +717,35 @@
     </div>
   </section>
 
-  <!-- Inscrição: botão baixa PDF -->
-  <section id="inscricao" class="bg-zinc-50 dark:bg-[#0d1430]">
-    <div class="mx-auto max-w-6xl px-4 py-14 grid md:grid-cols-2 gap-10 items-center">
-      <div>
-<h2 class="h1-fancy text-2xl md:text-3xl font-bold mb-3 brand-navy dark:text-white gold-underline">
-  Quer falar com a gente?
-</h2>
-<p class="text-sm text-zinc-700 dark:text-zinc-300 mb-6">
-  Use o botão ao lado para enviar um e-mail direto para nossa equipe, ou veja outras formas de contato mais abaixo.
-</p>
-
-      </div>
-<div class="rounded-3xl border border-zinc-200/60 dark:border-white/10 shadow-sm p-8 bg-white dark:bg-white/5 text-center brand-ring gold-top">
-  <a class="btn-primary w-full inline-flex items-center justify-center"
-     href="mailto:ligalaipeem@gmail.com?subject=Contato%20LAIPEEM&body=Olá,%20gostaria%20de%20tirar%20uma%20dúvida%20com%20a%20equipe.">
-    ✉️ Enviar e-mail
-  </a>
-  <p class="text-[11px] text-zinc-500 dark:text-zinc-400 mt-3">
-    Alternativa rápida de contato direto por e-mail.
-  </p>
-</div>
-
+<!-- Inscrição / Contato -->
+<section id="inscricao" class="bg-zinc-50 dark:bg-[#0d1430]">
+  <div class="mx-auto max-w-6xl px-4 py-14 grid md:grid-cols-2 gap-10 items-center">
+    
+    <!-- Texto da esquerda -->
+    <div>
+      <h2 class="h1-fancy text-2xl md:text-3xl font-bold mb-3 brand-navy dark:text-white gold-underline">
+        Quer falar com a gente?
+      </h2>
+      <p class="text-sm text-zinc-700 dark:text-zinc-300 mb-6">
+        Use o botão ao lado para enviar um e-mail direto para nossa equipe, ou veja outras formas de contato mais abaixo.
+      </p>
     </div>
-  </section>
+
+    <!-- Botão da direita -->
+    <div class="rounded-3xl border border-zinc-200/60 dark:border-white/10 shadow-sm p-8 bg-white dark:bg-white/5 text-center brand-ring gold-top">
+      <a class="btn-primary w-full inline-flex items-center justify-center"
+         href="mailto:ligalaipeem@gmail.com?subject=Contato%20LAIPEEM&body=Ol%C3%A1%2C%20gostaria%20de%20tirar%20uma%20d%C3%BAvida%20com%20a%20equipe."
+         target="_blank" rel="noopener">
+        ✉️ Enviar e-mail
+      </a>
+      <p class="text-[11px] text-zinc-500 dark:text-zinc-400 mt-3">
+        Alternativa rápida de contato direto por e-mail.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 <!-- Fale Conosco -->
 <section id="contato" class="bg-zinc-50 dark:bg-[#0d1430]">
   <div class="mx-auto max-w-4xl px-4 py-14">
