--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@
       <li class="ms-6 py-5">
         <span class="absolute -start-2 top-7 h-3 w-3 rounded-full ring-4 ring-white dark:ring-[#0d1430]" style="background:var(--gold)"></span>
         <div class="flex flex-wrap items-center gap-3">
-          <span class="date-chip">A definir</span>
+          <span class="date-chip">29/09</span>
           <h3 class="font-semibold brand-navy dark:text-white">Encontro 03 · Pesquisa científica</h3>
         </div>
         <div class="flex flex-wrap items-center gap-2 mt-2">
-          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰ A definir</span>
+          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰ 19h</span>
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-[color:var(--gold)] text-[#0b1020] dark:bg-white/10 dark:text-white">⏱️ Carga: 2h</span>
         </div>
         <p class="mt-2 text-sm text-zinc-700 dark:text-zinc-300">
@@ -353,11 +353,11 @@
       <li class="ms-6 py-5">
         <span class="absolute -start-2 top-7 h-3 w-3 rounded-full ring-4 ring-white dark:ring-[#0d1430]" style="background:var(--gold)"></span>
         <div class="flex flex-wrap items-center gap-3">
-          <span class="date-chip">A definir</span>
+          <span class="date-chip">07/10</span>
           <h3 class="font-semibold brand-navy dark:text-white">Encontro 04 · Tecnologias em estética facial I</h3>
         </div>
         <div class="flex flex-wrap items-center gap-2 mt-2">
-          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰ A definir</span>
+          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰19h</span>
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-[color:var(--gold)] text-[#0b1020] dark:bg-white/10 dark:text-white">⏱️ Carga: 3–4h</span>
         </div>
         <p class="mt-2 text-sm text-zinc-700 dark:text-zinc-300">
