--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-[color:var(--gold)] text-[#0b1020] dark:bg-white/10 dark:text-white">⏱️ Carga: 2h</span>
         </div>
         <p class="mt-2 text-sm text-zinc-700 dark:text-zinc-300">
-          Da prática ao artigo: normas, referências e publicação (oficina).
+          Como transformar a pesquisa científica em autoridade profissional.
         </p>
       </li>
 
@@ -353,15 +353,15 @@
       <li class="ms-6 py-5">
         <span class="absolute -start-2 top-7 h-3 w-3 rounded-full ring-4 ring-white dark:ring-[#0d1430]" style="background:var(--gold)"></span>
         <div class="flex flex-wrap items-center gap-3">
-          <span class="date-chip">07/10</span>
-          <h3 class="font-semibold brand-navy dark:text-white">Encontro 04 · Tecnologias em estética facial I</h3>
+          <span class="date-chip">CANCELADO</span>
+          <h3 class="font-semibold brand-navy dark:text-white">Encontro 04 ·Acunpuntura - Auriculoterapia</h3>
         </div>
         <div class="flex flex-wrap items-center gap-2 mt-2">
-          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰19h</span>
+          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰CANCELADO</span>
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-[color:var(--gold)] text-[#0b1020] dark:bg-white/10 dark:text-white">⏱️ Carga: 3–4h</span>
         </div>
         <p class="mt-2 text-sm text-zinc-700 dark:text-zinc-300">
-          O Mercado das Tecnologias: Como e o que usar na minha prática clínica (demonstração). 
+          Cancelado 
         </p>
       </li>
 
@@ -369,15 +369,15 @@
       <li class="ms-6 py-5">
         <span class="absolute -start-2 top-7 h-3 w-3 rounded-full ring-4 ring-white dark:ring-[#0d1430]" style="background:var(--gold)"></span>
         <div class="flex flex-wrap items-center gap-3">
-          <span class="date-chip">A definir</span>
-          <h3 class="font-semibold brand-navy dark:text-white">Encontro 05 · Cosmetologia facial I</h3>
+          <span class="date-chip">17/10</span>
+          <h3 class="font-semibold brand-navy dark:text-white">Encontro 05 · Anatomia Facial</h3>
         </div>
         <div class="flex flex-wrap items-center gap-2 mt-2">
-          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰ A definir</span>
+          <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰ 15h</span>
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-[color:var(--gold)] text-[#0b1020] dark:bg-white/10 dark:text-white">⏱️ Carga: 3–4h</span>
         </div>
         <p class="mt-2 text-sm text-zinc-700 dark:text-zinc-300">
-          Dermocosméticos nos tratamentos estéticos.
+          Anatomia Facial Aplicada à Harmonização Facial
         </p>
       </li>
 
