--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <span class="absolute -start-2 top-7 h-3 w-3 rounded-full ring-4 ring-white dark:ring-[#0d1430]" style="background:var(--gold)"></span>
         <div class="flex flex-wrap items-center gap-3">
           <span class="date-chip">CANCELADO</span>
-          <h3 class="font-semibold brand-navy dark:text-white">Encontro 04 ·Acunpuntura - Auriculoterapia</h3>
+          <h3 class="font-semibold brand-navy dark:text-white">Encontro 04 ·Acupuntura - Auriculoterapia</h3>
         </div>
         <div class="flex flex-wrap items-center gap-2 mt-2">
           <span class="inline-flex items-center px-2 py-0.5 rounded-full text-[11px] font-semibold bg-zinc-100 text-zinc-800 dark:bg-white/10 dark:text-zinc-100">⏰CANCELADO</span>
